cabal-version: 1.12

name:           encoding-via
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/encoding-via#readme>
homepage:       https://github.com/githubuser/encoding-via#readme
bug-reports:    https://github.com/githubuser/encoding-via/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/encoding-via

library
  exposed-modules:
      Lib
  other-modules:
      Paths_encoding_via
  hs-source-dirs:
      src
  build-depends:
      aeson
    , aeson-casing
    , base >=4.7 && <5
    , bytestring
    , unordered-containers
    , text
  default-language: Haskell2010

test-suite encoding-via-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_encoding_via
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-casing
    , base >=4.7 && <5
    , bytestring
    , encoding-via
  default-language: Haskell2010
